syntax = "proto3";

package com.github.yakami.library.infrastructure.rpc.process;

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}

message ProductID {
    string value = 1;
}


service ProductInfo {

    rpc addProduct(Product) returns (ProductID);
    rpc getProduct(ProductID) returns (Product);

}